parser/parser_tests/tests_input/unit/good/Good46.ty
singleton class StudentFactory { 
    
    functions: {
        getStudent: () -> List[Student] = {
            Student
        }
    }
}
