parser/parser_tests/tests_input/unit/bad/Bad10.ty
singleton class RandomGenerator { 
    
    functions: {
        generate: () -> Int = {
            nextInt()
        }
        
        nextInt: () -> Int = 37732
    }
}
